--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,22 @@
 spring.application.name=FinTrack
 
-# PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://<RENDER_DB_HOST>:<PORT>/<DATABASE>
-spring.datasource.username=<RENDER_DB_USER>
-spring.datasource.password=<RENDER_DB_PASSWORD>
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+server.port=${port:8080}
 
-# Server Port (opcional, padrão é 8080)
-server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/finTrack?createDatabaseIfNotExist=true
 
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jackson.default-property-inclusion=NON_NULL
+
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
