--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=FinTrack
 
 server.port=${port:8080}
 
+api.securtiry.token.secret=${JWT_SECRET:my-secret-key}
+
 spring.datasource.url=jdbc:mysql://localhost:3306/finTrack?createDatabaseIfNotExist=true
 
 spring.datasource.username=root
