--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,31 @@
+#spring.application.name=FinTrack
+#server.port=${port:8080}
+#
+#api.securtiry.token.secret=${JWT_SECRET:my-secret-key}
+#
+#spring.datasource.url=${JDBC_DATASOURCE_URL}
+##spring.datasource.url=jdbc:postgresql://localhost:5432/fintrack
+##spring.datasource.username=fmarra
+##spring.datasource.password=password
+#
+#spring.jpa.hibernate.ddl-auto=create-drop
+#
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.format_sql=true
+
 spring.application.name=FinTrack
 
 server.port=${port:8080}
 
 api.securtiry.token.secret=${JWT_SECRET:my-secret-key}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/finTrack?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/finTrack?createDatabaseIfNotExist=true
+spring.datasource.url=j${JDBC_DATASOURCE_URL}
 
-spring.datasource.username=root
-spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.default-property-inclusion=NON_NULL
-
-spring.security.oauth2.client.registration.google.client-id=
-spring.security.oauth2.client.registration.google.client-secret=
-spring.security.oauth2.client.registration.google.scope=profile,email
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
-spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
-spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
-spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
